--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,85 @@
 /* ----------------- FUENTE TIPOGRAFICA DE GOOGLEFONT----------------- */
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500&display=swap");
 
-/* ----------------- COLORES VARIABLES CSS----------------- */
+/* ----------------- VARIABLES COLORES PRINCIPALES MODO OSCURO  ----------------- */
 :root {
-  --color-primario: rgb(27, 26, 25);
-  --color-secundario: rgb(234, 234, 234);
-  --color-terciario: rgb(225, 202, 83);
-  --color-1-op50: rgba(0, 0, 0, 0.5);
-  --color-1-op100: rgb(0, 0, 0);
+  --color-primero: rgb(27, 26, 25);
+  --color-segundo: rgb(234, 234, 234);
+  --color-tercero: rgb(225, 202, 83);
+  --color-cuarto: rgb(83, 152, 225);
+  --color-fondo-op50: rgba(0, 0, 0, 0.5);
+  --color-fondo-op100: rgb(0, 0, 0);
+}
+
+/* ----------------- VARIABLES COLORES ALTERNATIVOS MODO CLARO  ----------------- */
+#toggleMode:checked ~ header,
+#toggleMode:checked ~ main,
+#toggleMode:checked ~ footer {
+  --color-primero: rgb(234, 234, 234);
+  --color-segundo: rgb(27, 26, 25);
+  --color-tercero: rgb(83, 152, 225);
+  --color-fondo-op50: rgba(220, 220, 220, 0.5);
+  --color-fondo-op100: rgb(220, 220, 220, 0.9);
+}
+
+/* ----------------- COLOR PRIMERO ----------------- */
+.navbar-toggler,
+main#musica .divisor-2 .section3 a:hover,
+main.contacto .contenedor .section3 form button:hover,
+main.contacto .contenedor .section3 form input:hover,
+main.contacto .contenedor .section3 form textarea:hover {
+  color: var(--color-primero);
+}
+
+header nav.navbar,
+footer,
+main#musica .divisor-2 .section3 a,
+main#musica .divisor-2 .section3 a:hover,
+main.contacto .contenedor .section3 form button {
+  background-color: var(--color-primero);
+}
+
+/* ----------------- COLOR SEGUNDO ----------------- */
+.navbar-brand,
+.navbar-brand:visited,
+.fas.fa-bars,
+.navbar-nav a,
+h1,
+h2,
+h3,
+h4,
+p,
+a,
+main.contacto .contenedor .section3 form label,
+main.contacto .contenedor .section3 form button {
+  color: var(--color-segundo);
+}
+
+/* ----------------- COLOR TERCERO ----------------- */
+.toggleDark,
+.toggleLight:hover,
+.navbar-brand:hover,
+.fas.fa-bars:hover,
+footer div#redes ul li a:hover {
+  color: var(--color-tercero);
+}
+
+main.contacto .contenedor .section3 form button:hover,
+main.contacto .contenedor .section3 form input:hover,
+main.contacto .contenedor .section3 form textarea:hover {
+  background-color: var(--color-tercero);
+}
+
+a[aria-current="page"],
+.nav-link:hover {
+  background-color: var(--color-tercero);
+  color: var(--color-primero);
+}
+
+/* ----------------- COLOR CUARTO ----------------- */
+.toggleDark:hover,
+.toggleLight {
+  color: var(--color-cuarto);
 }
 
 /* ----------------- UNIVERSALES ----------------- */
@@ -22,9 +94,12 @@
   text-align: center;
 }
 
+*:hover,
+#navbarNavAltMarkup {
+  transition: 0.2s;
+}
 
-
-/* ------------ TOGGLER CLARO/OSCURO ------------ */
+/* ------------ MODO OSCURO/CLARO ------------ */
 #toggleMode {
   visibility: hidden;
 }
@@ -38,50 +113,17 @@
   left: 10px;
 }
 
-.toggleDark {
-  display: block;
-  color: var(--color-terciario);
-}
-
-.toggleDark:hover {
-  color: rgb(83, 152, 225);
-  transition: 0.2s;
-}
-
-.toggleLight:hover {
-  color: var(--color-terciario);
-  transition: 0.2s;
-}
-
-.toggleLight {
-  display: none;
-  color: rgb(83, 152, 225);
-}
-
-#toggleMode:checked ~ .toggleDark {
-  display: none;
-}
-
+.toggleDark,
 #toggleMode:checked ~ .toggleLight {
   display: block;
 }
 
-#toggleMode:checked ~ header,
-#toggleMode:checked ~ main,
-#toggleMode:checked ~ footer {
-  --color-primario: rgb(234, 234, 234);
-  --color-secundario: rgb(27, 26, 25);
-  --color-terciario: rgb(83, 152, 225);
-  --color-1-op50: rgba(220, 220, 220, 0.5);
-  --color-1-op100: rgb(220, 220, 220, 0.9);
+.toggleLight,
+#toggleMode:checked ~ .toggleDark {
+  display: none;
 }
 
-/* ----------------- HEADER BOOTSTRAP ----------------- */
-
-header nav.navbar {
-  background-color: var(--color-primario);
-}
-
+/* ----------------- HEADER ----------------- */
 .navbar-nav.ms-auto {
   align-items: center;
 }
@@ -89,36 +131,15 @@ header nav.navbar {
 .navbar-brand {
   font-weight: 200;
   font-size: 1.8rem;
-  color: var(--color-secundario);
   padding-left: 20px;
 }
 
-.navbar-brand:visited {
-  color: var(--color-secundario);
-}
-
-.navbar-brand:hover {
-  color: var(--color-terciario);
-  transition: 0.2s;
-}
-
-#navbarNavAltMarkup {
-  transition: 0.2s;
-}
-
 .navbar-toggler {
-  color: var(--color-primario);
   border: none;
 }
 
 .fas.fa-bars {
-  color: var(--color-secundario);
   font-size: 1.7rem;
-}
-
-.fas.fa-bars:hover {
-  color: var(--color-terciario);
-  transition: 0.2s;
 }
 
 .navbar-nav {
@@ -127,38 +148,17 @@ header nav.navbar {
 }
 
 .navbar-nav a {
-  color: var(--color-secundario);
   font-weight: 200;
   width: 6rem;
   text-align: center;
   margin: 0.2rem;
 }
 
-a[aria-current="page"] {
-  background-color: var(--color-terciario);
-  color: var(--color-primario);
-}
-
-.nav-link:hover {
-  background-color: var(--color-terciario);
-  color: var(--color-primario);
-  transition: 0.2s;
-}
-
 header .logo-2 {
   display: none;
 }
 
-/* ----------------- TITULOS Y TEXTOS UNIVERSALES----------------- */
-h1,
-h2,
-h3,
-h4,
-p,
-a {
-  color: var(--color-secundario);
-}
-
+/* ----------------- TITULOS Y TEXTOS ----------------- */
 h1,
 h2,
 h3 {
@@ -166,8 +166,17 @@ h3 {
   padding-bottom: 1.5rem;
 }
 
+h1,
+h1 strong,
+h2,
+h2 strong,
+p,
+strong {
+  letter-spacing: 0.25rem;
+}
+
+h3,
 h4 {
-  font-size: 0.7rem;
   letter-spacing: 0.125rem;
 }
 
@@ -179,7 +188,14 @@ h2 {
 }
 h3 {
   font-size: 1.5rem;
-  letter-spacing: 0.125rem;
+}
+
+h4 {
+  font-size: 0.7rem;
+}
+
+p {
+  font-size: 1.2rem;
 }
 
 h1,
@@ -187,17 +203,11 @@ h1 strong,
 h2,
 h2 strong {
   font-weight: 500;
-  letter-spacing: 0.25rem;
-}
-
-p {
-  font-size: 1.2rem;
 }
 
 p,
 strong {
   font-weight: 400;
-  letter-spacing: 0.25rem;
 }
 
 a {
@@ -205,9 +215,8 @@ a {
   letter-spacing: 0.125rem;
 }
 
-/* ----------------- FOOTER UNIVERSAL----------------- */
+/* ----------------- FOOTER ----------------- */
 footer {
-  background-color: var(--color-primario);
   display: flex;
   justify-content: space-between;
   padding: 0.8rem;
@@ -217,10 +226,10 @@ footer {
 }
 
 footer div#redes ul {
-display: flex;
-margin: auto;
-gap: 3rem;
-padding-left: 0;
+  display: flex;
+  margin: auto;
+  gap: 3rem;
+  padding-left: 0;
 }
 
 footer a,
@@ -229,16 +238,10 @@ footer h4 {
   margin: 0;
 }
 
-footer div#redes ul li a:hover {
-  color: var(--color-terciario);
-  transition: 0.2s;
-}
-
 /* ----------------- INDEX.HTML ----------------- */
-
 main#index {
   padding-top: 1.8rem;
-  background: linear-gradient(var(--color-1-op100), var(--color-1-op50)),
+  background: linear-gradient(var(--color-fondo-op100), var(--color-fondo-op50)),
     url(../assets/img/background/1.png);
   background-size: cover;
   background-position: center;
@@ -302,7 +305,6 @@ main#index {
 }
 
 .main .section2 .divisor .divisor-texto h3 {
-
   margin: auto;
 }
 
@@ -337,7 +339,7 @@ main#index {
   height: 20rem;
   gap: 2px;
   object-fit: cover;
-  border: 1px solid var(--color-terciario);
+  border: 1px solid var(--color-tercero);
 }
 
 .main .section3 .divisor3 {
@@ -349,22 +351,22 @@ main#index {
   width: 80%;
   margin-top: 40px;
   border-radius: 20px;
-  border: solid 1px var(--color-primario);
+  border: solid 1px var(--color-primero);
 }
 
-/* ----------------- #MUSICA = PIANO.HTML / CANTO.HTML / VIOLIN.HTML ----------------- */
+/* ---- #MUSICA = PIANO.HTML / CANTO.HTML / VIOLIN.HTML ---- */
 main.piano {
-  background: linear-gradient(var(--color-1-op100), var(--color-1-op50)),
+  background: linear-gradient(var(--color-fondo-op100), var(--color-fondo-op50)),
     url(../assets/img/background/1.png);
 }
 
 main.canto {
-  background: linear-gradient(var(--color-1-op100), var(--color-1-op50)),
+  background: linear-gradient(var(--color-fondo-op100), var(--color-fondo-op50)),
     url(../assets/img/background/4.jpg);
 }
 
 main.violin {
-  background: linear-gradient(var(--color-1-op100), var(--color-1-op50)),
+  background: linear-gradient(var(--color-fondo-op100), var(--color-fondo-op50)),
     url(../assets/img/background/1.jpg);
 }
 
@@ -390,7 +392,7 @@ main#musica .divisor-1 section div img {
   height: auto;
   object-fit: cover;
   border-radius: 20px;
-  border: solid 1px var(--color-terciario);
+  border: solid 1px var(--color-tercero);
   margin: 3rem;
 }
 
@@ -403,8 +405,8 @@ main#musica .divisor-2 {
 }
 
 main#musica p {
-width: 80%;
-margin: auto;
+  width: 80%;
+  margin: auto;
 }
 
 main#musica .divisor-2 .section3 {
@@ -419,16 +421,14 @@ main#musica .divisor-2 .section3 img {
   width: 10rem;
   margin: auto;
   border-radius: 10px;
-  border: solid 1px var(--color-terciario);
+  border: solid 1px var(--color-tercero);
 }
 
 main#musica .divisor-2 .section3 a {
-  background-color: var(--color-primario);
-  color: var(--color-secundario);
   padding: 1em;
   max-width: 8rem;
   border-radius: 10px;
-  border: solid 1px var(--color-terciario);
+  border: solid 1px var(--color-tercero);
   font-weight: 300;
   text-transform: uppercase;
   display: flex;
@@ -438,15 +438,9 @@ main#musica .divisor-2 .section3 a {
   letter-spacing: 1px;
 }
 
-main#musica .divisor-2 .section3 a:hover {
-  color: var(--color-primario);
-  background-color: var(--color-terciario);
-  transition: 0.2s;
-}
-
-/* ----------------------------------- CONTACTO.HTML ---------------------------------- */
+/* ---------------- CONTACTO.HTML --------------- */
 main.contacto {
-  background: linear-gradient(var(--color-1-op100), var(--color-1-op50)),
+  background: linear-gradient(var(--color-fondo-op100), var(--color-fondo-op50)),
     url(../assets/img/background/2.jpg);
   background-size: cover;
   background-position: center;
@@ -495,7 +489,6 @@ main.contacto .contenedor .section3 form {
 }
 
 main.contacto .contenedor .section3 form label {
-  color: var(--color-secundario);
   padding: 4px;
   letter-spacing: 0.25rem;
 }
@@ -516,24 +509,13 @@ main.contacto .contenedor .section3 form textarea {
 }
 
 main.contacto .contenedor .section3 form button {
-  background-color: var(--color-primario);
-  color: var(--color-secundario);
   padding: 0.8em;
   border-radius: 10px;
-  border: solid 1px var(--color-terciario);
+  border: solid 1px var(--color-tercero);
   font-weight: 300;
   text-transform: uppercase;
   letter-spacing: 1px;
 }
-
-main.contacto .contenedor .section3 form button:hover,
-main.contacto .contenedor .section3 form input:hover,
-main.contacto .contenedor .section3 form textarea:hover {
-  background-color: var(--color-terciario);
-  color: var(--color-primario);
-  transition: 0.2s;
-}
-
 main.contacto .contenedor .section3 form .checkbox {
   display: flex;
   margin: auto;
@@ -543,11 +525,11 @@ main.contacto .contenedor .section3 form .checkbox {
 
 main.contacto .contenedor .section3 form .checkbox input#checkbox {
   width: 1.1rem;
-  accent-color: var(--color-terciario);
+  accent-color: var(--color-tercero);
 }
 
-@media (max-width: 992px) {
   /* ----------------- MEDIAQUERIES 992px ----------------- */
+@media (max-width: 992px) {
 
   /* ----------------- INDEX.HTML----------------- */
   .section-top {
@@ -570,10 +552,11 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
     align-items: self-start;
   }
 }
-/* ----------------- MEDIAQUERIES 790px ----------------- */
 
+/* ----------------- MEDIAQUERIES 790px ----------------- */
 @media (max-width: 790px) {
-  /* ----------------- TITULOS Y TEXTOS UNIVERSALES----------------- */
+
+  /* ----------------- TITULOS Y TEXTOS ----------------- */
   h1,
   h1 strong,
   h2,
@@ -595,8 +578,6 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
     width: 26rem;
   }
 
-
-
   /* ----------------- INDEX.HTML SECCION 3----------------- */
   .main .section3 .divisor2 img {
     width: 10rem;
@@ -607,7 +588,7 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
     height: 15rem;
   }
 
-  /* ----------------- #MUSICA = PIANO.HTML / CANTO.HTML / VIOLIN.HTML ----------------- */
+  /* ---- #MUSICA = PIANO.HTML / CANTO.HTML / VIOLIN.HTML ---- */
   main#musica {
     flex-direction: column;
     padding-left: 0.5rem;
@@ -618,10 +599,10 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
     padding: 1rem;
   }
 
-  main#musica h1,h3 {
+  main#musica h1,
+  h3 {
     width: 200px;
   }
-
 
   main#musica .divisor-1 {
     width: 100%;
@@ -648,7 +629,6 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
     position: static;
     margin: auto;
   }
-
 
   main#musica .divisor-2 .section3 img {
     margin: 1rem;
@@ -678,22 +658,23 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
     margin-right: 0;
   }
 }
-/* ----------------- MEDIAQUERIES 620px----------------- */
 
+/* ----------------- MEDIAQUERIES 620px----------------- */
 @media (max-width: 620px) {
-  /* ----------------- FOOTER UNIVERSAL----------------- */
+
+  /* ----------------- FOOTER ----------------- */
   footer div#redes ul {
     gap: 1rem;
   }
 
-  /* ----------------- TITULOS Y TEXTOS UNIVERSALES----------------- */
+  /* ----------------- TITULOS Y TEXTOS ----------------- */
   h1,
   h1 strong,
   h2,
   h3 {
     font-size: 1.1rem;
     font-weight: bold;
-margin: auto;
+    margin: auto;
   }
 
   p {
@@ -731,8 +712,7 @@ margin: auto;
     margin: 0.4rem;
   }
 
-  /* ----------------- #MUSICA = PIANO.HTML / CANTO.HTML / VIOLIN.HTML ----------------- */
-
+ /* ---- #MUSICA = PIANO.HTML / CANTO.HTML / VIOLIN.HTML ---- */
   main#musica .divisor-1 .section1,
   main#musica .divisor-1 .section2,
   main#musica .divisor-1 .section3 {
@@ -773,10 +753,11 @@ margin: auto;
     font-size: 0.9rem;
   }
 }
-/* ----------------- MEDIAQUERIES 290px----------------- */
 
+/* ----------------- MEDIAQUERIES 290px----------------- */
 @media (max-width: 290px) {
-  /* ----------------- HEADER UNIVERSAL----------------- */
+
+  /* ----------------- HEADER ----------------- */
   header .logo {
     display: none;
   }
@@ -799,20 +780,19 @@ margin: auto;
     width: auto;
   }
 
-  /* ----------------- FOOTER UNIVERSAL----------------- */
+  /* ----------------- FOOTER ----------------- */
   footer {
     flex-direction: column;
     height: 6rem;
   }
 
-    /* ----------------- INDEX.HTML ----------------- */
+  /* ----------------- INDEX.HTML ----------------- */
 
   .main .section3 .divisor2 img {
     width: 100%;
   }
 
-  /* ----------------- #MUSICA = PIANO.HTML / CANTO.HTML / VIOLIN.HTML ----------------- */
-  
+  /* ---- #MUSICA = PIANO.HTML / CANTO.HTML / VIOLIN.HTML ---- */
   main#musica h1,
   main#musica h3 {
     width: 100%;
