--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,7 @@ h3,
 h4,
 p,
 a,
+.main .section3 .divisor2 h3,
 main.contacto .contenedor .section3 form label,
 main.contacto .contenedor .section3 form button {
   color: var(--color-segundo);
@@ -326,18 +327,15 @@ main#index {
   padding-bottom: 4rem;
 }
 
-.main .section3 .divisor2 {
-  display: flex;
-  justify-content: space-evenly;
+.main .section3 .divisor2 .card {
+  background-color: transparent;
+  border: none;
 }
 
 .main .section3 .divisor2 img {
-  border-radius: 20px;
-  width: 10rem;
-  height: 20rem;
-  gap: 2px;
-  object-fit: cover;
-  border: 1px solid var(--color-tercero);
+width: 80%;
+border-radius: 20px;
+border: solid 1px var(--color-tercero);
 }
 
 .main .section3 .divisor3 {
@@ -551,8 +549,8 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
   }
 }
 
-/* ----------------- MEDIAQUERIES 790px ----------------- */
-@media (max-width: 790px) {
+/* ----------------- MEDIAQUERIES 768px ----------------- */
+@media (max-width: 768px) {
 
   /* ----------------- TITULOS Y TEXTOS ----------------- */
   h1,
@@ -574,12 +572,6 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
   /* ----------------- INDEX.HTML SECCION 2----------------- */
   .main .section2 .divisor {
     width: 26rem;
-  }
-
-  /* ----------------- INDEX.HTML SECCION 3----------------- */
-  .main .section3 .divisor2 img {
-    width: 10rem;
-    height: 14rem;
   }
 
   .main .section3 .divisor3 .mapa {
@@ -657,8 +649,8 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
   }
 }
 
-/* ----------------- MEDIAQUERIES 620px----------------- */
-@media (max-width: 620px) {
+/* ----------------- MEDIAQUERIES 576px----------------- */
+@media (max-width: 576px) {
 
   /* ----------------- FOOTER ----------------- */
   footer div#redes ul {
@@ -671,8 +663,7 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
   h2,
   h3 {
     font-size: 1.1rem;
-    font-weight: bold;
-    margin: auto;
+
   }
 
   p,
@@ -700,15 +691,6 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
   .main .section2 .divisor img {
     height: 7rem;
     width: 7rem;
-  }
-  .main .section3 .divisor2 {
-    flex-wrap: wrap;
-    gap: 0.2rem;
-  }
-
-  .main .section3 .divisor2 img {
-    height: 8rem;
-    margin: 0.4rem;
   }
 
  /* ---- #MUSICA = PIANO.HTML / CANTO.HTML / VIOLIN.HTML ---- */
@@ -782,12 +764,6 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
   footer {
     flex-direction: column;
     height: 6rem;
-  }
-
-  /* ----------------- INDEX.HTML ----------------- */
-
-  .main .section3 .divisor2 img {
-    width: 100%;
   }
 
   /* ---- #MUSICA = PIANO.HTML / CANTO.HTML / VIOLIN.HTML ---- */
