actualizacion index y #musica + css

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ main {
   min-height: 100vh;
 }
 
-.main .section2 .divisor img, 
+.main .section2 .divisor img,
 .main .section3 .divisor2 img,
 .main .section3 .divisor3 .mapa,
 main#musica .divisor-1 section div img,
@@ -33,8 +33,7 @@ main#musica .divisor-2 .section3 img,
 main#musica .divisor-2 .section3 a,
 main.contacto .contenedor .section3 form input,
 main.contacto .contenedor .section3 form textarea,
-main.contacto .contenedor .section3 form button
-{
+main.contacto .contenedor .section3 form button {
   border-radius: 20px;
 }
 
@@ -79,7 +78,7 @@ main.contacto .contenedor .section3 form button {
 
 .main .section3 .divisor3 .mapa {
   border: solid 1px var(--color-primero);
-  }
+}
 
 /* ----------------- COLOR SEGUNDO ----------------- */
 .navbar-brand,
@@ -122,7 +121,7 @@ main#musica .divisor-2 .section3 img,
 main.contacto .contenedor .section3 form button,
 main#musica .divisor-2 .section3 a {
   border: solid 1px var(--color-tercero);
-  }
+}
 
 /* ----------------- COLOR CUARTO ----------------- */
 .toggleDark:hover,
@@ -159,7 +158,6 @@ h1,
 h2,
 h3 {
   text-transform: uppercase;
-  padding-bottom: 1.5rem;
 }
 
 h1,
@@ -295,45 +293,50 @@ main#index {
 
 /* ----------------- INDEX.HTML SECCION 1----------------- */
 .main .section1 {
-  padding-top: 2rem;
+
   width: 100%;
-  max-width: 1400px;
-  padding-left: 1rem;
+  max-width: 1200px;
+  padding-top: 4rem;
   padding-right: 1rem;
+  padding-bottom: 4rem;
+  padding-left: 1rem;
   margin: auto;
 }
 
 /* ----------------- INDEX.HTML SECCION 2----------------- */
 .main .section2 {
   width: 100%;
-  padding-top: 2rem;
-  max-width: 1400px;
+  max-width: 1200px;
   margin: auto;
-  display: flex;
-  justify-content: space-around;
-  gap: 0.1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .main .section2 .divisor {
-  width: 30rem;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 0.1rem;
+  width: 100%;
+  display: flex;
+  gap: 0.5rem;
+  margin: auto;
+  justify-content: space-between;
 }
 
 .main .section2 .divisor img {
-  width: 100%;
+  height: 8rem;
   object-fit: cover;
+
 }
 
 .main .section2 .divisor .divisor-texto {
   width: 100%;
+  height: 9rem;
   margin: auto;
   order: -1;
 }
 
 .main .section2 .divisor .divisor-texto h3 {
+  width: 90%;
   margin: auto;
+  padding-bottom: 10px;
 }
 
 /* ----------------- INDEX.HTML SECCION 3 ----------------- */
@@ -349,7 +352,7 @@ main#index {
 
 .main .section3 .divisor1 {
   width: 100%;
-  max-width: 1400px;
+  max-width: 1200px;
   margin: auto;
   vertical-align: middle;
   padding-top: 4rem;
@@ -362,7 +365,7 @@ main#index {
 }
 
 .main .section3 .divisor2 img {
-width: 80%;
+  width: 80%;
 }
 
 .main .section3 .divisor3 {
@@ -394,22 +397,17 @@ main.violin {
 main#musica {
   background-size: cover;
   background-position: center;
-  flex-direction: column;
-  align-items: flex-start;
-  padding-top: 5rem;
-  padding-bottom: 2rem;
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+  padding: 1rem;
+  padding-top: 4rem;
 }
 
 main#musica h1,
 h3 {
-  width: 200px;
+  width: 22rem;
 }
 
 main#musica p {
   width: 80%;
-  margin: auto;
   padding: 1rem;
 }
 
@@ -418,17 +416,16 @@ main#musica .divisor-1 {
   width: 100%;
   max-width: 1200px;
   margin: auto;
-  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 main#musica .divisor-1 section div img {
-  max-width: 12rem;
-  height: auto;
+  width: 12rem;
+  height: 12rem;
   object-fit: cover;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 
 main#musica .divisor-1 .section1,
@@ -437,7 +434,6 @@ main#musica .divisor-1 .section3 {
   display: flex;
   align-items: center;
 }
-
 
 /* ----------------- #MUSICA DIVISOR 2 ----------------- */
 main#musica .divisor-2 {
@@ -560,9 +556,8 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
   accent-color: var(--color-tercero);
 }
 
-  /* ----------------- MEDIAQUERIES 992px ----------------- */
+/* ----------------- MEDIAQUERIES 992px ----------------- */
 @media (max-width: 992px) {
-
   /* ----------------- INDEX.HTML----------------- */
   .section-top {
     width: 100%;
@@ -587,7 +582,6 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
 
 /* ----------------- MEDIAQUERIES 768px ----------------- */
 @media (max-width: 768px) {
-
   /* ----------------- TITULOS Y TEXTOS ----------------- */
   h1,
   h1 strong,
@@ -605,9 +599,21 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
     width: 100%;
     height: 10rem;
   }
-  /* ----------------- INDEX.HTML SECCION 2----------------- */
+
   .main .section2 .divisor {
-    width: 26rem;
+    width: 100%;
+    display: inline-block;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  .main .section2 .divisor-texto {
+    padding-top: 1rem;
+  }
+
+  .main .section2 .divisor img {
+    height: 7rem;
+    width: 7rem;
   }
 
   .main .section3 .divisor3 .mapa {
@@ -640,7 +646,6 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
 
 /* ----------------- MEDIAQUERIES 576px----------------- */
 @media (max-width: 576px) {
-
   /* ----------------- FOOTER ----------------- */
   footer div#redes ul {
     gap: 1rem;
@@ -652,7 +657,6 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
   h2,
   h3 {
     font-size: 1.1rem;
-
   }
 
   p,
@@ -660,29 +664,7 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
     font-size: 0.9rem;
   }
 
-  /* ----------------- INDEX.HTML ----------------- */
-  .main .section1 {
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-  }
-
-  .main .section2 .divisor {
-    width: 100%;
-    display: inline-block;
-    margin-top: 0;
-    margin-bottom: 0;
-  }
-
-  .main .section2 .divisor-texto {
-    padding-top: 1rem;
-  }
-
-  .main .section2 .divisor img {
-    height: 7rem;
-    width: 7rem;
-  }
-
- /* ---- #MUSICA = PIANO.HTML / CANTO.HTML / VIOLIN.HTML ---- */
+  /* ---- #MUSICA = PIANO.HTML / CANTO.HTML / VIOLIN.HTML ---- */
   main#musica .divisor-1 .section1,
   main#musica .divisor-1 .section2,
   main#musica .divisor-1 .section3 {
@@ -711,6 +693,10 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
     margin: auto;
   }
 
+  main#musica .divisor-1 section div {
+    order: -1;
+  }
+
   /* ----------------- CONTACTO.HTML----------------- */
   main.contacto .contenedor .section3 form input,
   main.contacto .contenedor .section3 form textarea {
@@ -725,7 +711,6 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
 
 /* ----------------- MEDIAQUERIES 290px----------------- */
 @media (max-width: 290px) {
-
   /* ----------------- HEADER ----------------- */
   header .logo {
     display: none;
