--- a/css/styles.css
+++ b/css/styles.css
@@ -28,9 +28,8 @@ main {
 .main .section2 .divisor img,
 .main .section3 .divisor2 img,
 .main .section3 .divisor3 .mapa,
-main#musica .divisor-1 section div img,
-main#musica .divisor-2 .section3 img,
-main#musica .divisor-2 .section3 a,
+main#musica div section div img,
+main#musica .divisor-2 .section4 a,
 main.contacto .contenedor .section3 form input,
 main.contacto .contenedor .section3 form textarea,
 main.contacto .contenedor .section3 form button {
@@ -60,7 +59,7 @@ main.contacto .contenedor .section3 form button {
 
 /* ----------------- COLOR PRIMERO ----------------- */
 .navbar-toggler,
-main#musica .divisor-2 .section3 a:hover,
+main#musica .divisor-2 .section4 a:hover,
 main.contacto .contenedor .section3 form button:hover,
 main.contacto .contenedor .section3 form input:hover,
 main.contacto .contenedor .section3 form textarea:hover,
@@ -71,7 +70,7 @@ header a[aria-current="page"],
 
 header nav.navbar,
 footer,
-main#musica .divisor-2 .section3 a,
+main#musica .divisor-2 .section4 a,
 main.contacto .contenedor .section3 form button {
   background-color: var(--color-primero);
 }
@@ -106,7 +105,7 @@ footer div#redes ul li a:hover {
   color: var(--color-tercero);
 }
 
-main#musica .divisor-2 .section3 a:hover,
+main#musica .divisor-2 .section4 a:hover,
 main.contacto .contenedor .section3 form button:hover,
 main.contacto .contenedor .section3 form input:hover,
 main.contacto .contenedor .section3 form textarea:hover,
@@ -117,9 +116,9 @@ a[aria-current="page"],
 
 .main .section3 .divisor2 img,
 main#musica .divisor-1 section div img,
-main#musica .divisor-2 .section3 img,
+main#musica .divisor-2 .section4 img,
 main.contacto .contenedor .section3 form button,
-main#musica .divisor-2 .section3 a {
+main#musica .divisor-2 .section4 a {
   border: solid 1px var(--color-tercero);
 }
 
@@ -276,21 +275,6 @@ main#index {
   background-position: center;
 }
 
-/* ----------------- INDEX.HTML SECCION TOP----------------- */
-.section-top {
-  width: 100%;
-  height: 20rem;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-}
-
-.section-top img {
-  width: 100%;
-  height: 100%;
-  max-height: 20rem;
-  object-fit: cover;
-}
-
 /* ----------------- INDEX.HTML SECCION 1----------------- */
 .main .section1 {
 
@@ -373,7 +357,7 @@ main#index {
 }
 
 .main .section3 .divisor3 .mapa {
-  max-width: 1000px;
+  max-width: 700px;
   width: 80%;
   margin-top: 40px;
 }
@@ -411,6 +395,13 @@ main#musica p {
   padding: 1rem;
 }
 
+main#musica div section div img {
+  width: 12rem;
+  height: 12rem;
+  object-fit: cover;
+  margin-bottom: 2rem;
+}
+
 /* ----------------- #MUSICA DIVISOR 1 ----------------- */
 main#musica .divisor-1 {
   width: 100%;
@@ -419,13 +410,6 @@ main#musica .divisor-1 {
   display: flex;
   flex-direction: column;
   justify-content: center;
-}
-
-main#musica .divisor-1 section div img {
-  width: 12rem;
-  height: 12rem;
-  object-fit: cover;
-  margin-bottom: 2rem;
 }
 
 main#musica .divisor-1 .section1,
@@ -437,15 +421,11 @@ main#musica .divisor-1 .section3 {
 
 /* ----------------- #MUSICA DIVISOR 2 ----------------- */
 main#musica .divisor-2 {
-  width: 100%;
-  height: auto;
-  margin-left: 2rem;
-  position: static;
   margin: auto;
-  top: 5rem;
+  padding-top: 2rem;
 }
 
-main#musica .divisor-2 .section3 {
+main#musica .divisor-2 section {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -453,20 +433,10 @@ main#musica .divisor-2 .section3 {
   align-items: center;
 }
 
-main#musica .divisor-2 .section3 img {
-  width: 10rem;
-  margin: 1rem;
-}
-
-main#musica .divisor-2 .section3 a {
-  padding: 1em;
-  max-width: 8rem;
+main#musica .divisor-2 .section4 a {
+  padding: 1.5em;
   font-weight: 300;
   text-transform: uppercase;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   letter-spacing: 1px;
 }
 
@@ -559,11 +529,6 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
 /* ----------------- MEDIAQUERIES 992px ----------------- */
 @media (max-width: 992px) {
   /* ----------------- INDEX.HTML----------------- */
-  .section-top {
-    width: 100%;
-    height: 16rem;
-  }
-
   .main .section2 {
     flex-direction: column;
     align-items: center;
@@ -592,12 +557,6 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
 
   p {
     font-size: 0.95rem;
-  }
-
-  /* ----------------- INDEX.HTML SECCION TOP----------------- */
-  .section-top {
-    width: 100%;
-    height: 10rem;
   }
 
   .main .section2 .divisor {
@@ -677,6 +636,10 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
     align-items: center;
   }
 
+  main#musica .divisor-1 section div {
+    order: -1;
+  }
+
   main#musica .divisor-2 {
     width: 100%;
     height: auto;
@@ -696,10 +659,6 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
   main#musica .divisor-2 .section3 a {
     width: 30%;
     margin: auto;
-  }
-
-  main#musica .divisor-1 section div {
-    order: -1;
   }
 
   /* ----------------- CONTACTO.HTML----------------- */
