--- a/css/styles.css
+++ b/css/styles.css
@@ -352,6 +352,7 @@ main#index {
   max-width: 1000px;
   display: flex;
   flex-direction: column;
+  margin: auto;
   padding-top: 4rem;
   padding-bottom: 4rem;
 }
@@ -411,6 +412,8 @@ main#musica {
 main#musica h1,
 main#musica h3 {
   width: 21rem;
+  margin-bottom: 1rem;
+  line-height: 2.5rem;
 }
 
 main#musica p {
@@ -752,7 +755,17 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
   main#musica .divisor-2 .section3 img {
     max-width: 80%;
     margin: auto;
-    margin-bottom: 1rem;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+  }
+
+  main#musica .divisor-2 .section4 a {
+    padding: 0.5rem;
+  }
+
+  main#musica .divisor-2 .section4 img {
+    width: 90%;
+    
   }
 
   /* ----------------- CONTACTO----------------- */
