reasignacion colores.css

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,6 +1,6 @@
 /* Importando estilos universales */
 @import "global/universales";
-@import "global/colores";
+@import "../css/colores";
 @import "global/fuente-tipografica";
 @import "global/textos";
 
