--- a/sass/breakpoints/_small.scss
+++ b/sass/breakpoints/_small.scss
@@ -11,26 +11,8 @@
   p {
     font-size: 0.95rem;
   }
-
+  /* ----------------- INDEX.HTML ----------------- */
   .main {
-    .section2 {
-      .divisor {
-        width: 100%;
-        display: inline-block;
-        margin-top: 0;
-        margin-bottom: 0;
-      }
-
-      .divisor-texto {
-        padding-top: 1rem;
-      }
-
-      .divisor img {
-        height: 7rem;
-        width: 7rem;
-      }
-    }
-
     .section3 {
       .divisor3 .mapa {
         height: 15rem;
