--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -43,6 +43,7 @@ main#index .section2 {
     img {
       height: 8rem;
       object-fit: cover;
+      padding: 0.2rem;
     }
 
     .divisor-texto {
